MacViews: Fix VoiceOver feedback in editable fields.

This requires some parameterized attributes to be supported.

BUG=657884

Review-Url: https://codereview.chromium.org/2957743002
Cr-Commit-Position: refs/heads/master@{#482502}

Former-commit-id: c1c3d95e1a96f839511a8f6c52e65f1375c553e0